trunk/Archive2/03/a23bd52d0bab52/output
main.cpp: In function 'int main()':
main.cpp:40:18: error: incomplete type 'string_thing_trait<string_thing<32ul> >' used in nested name specifier
     std::cout << string_thing_trait< string_thing<32> >::max_size << "\n";
                  ^
